# multifloats

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AUDIT_TODO.md  BENCHMARK.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/actions/build-docs/: action.yml
.github/workflows/: ci.yml  docs.yml  release.yml
bench/: BENCHMARK.md.j2  README.md  build_benchmark_md.py  ops.py  run_benchmarks.py
bench/results/: benchmark-m1-max.json  benchmark-pop-os.json  benchmark-raptor-lake.json  benchmark-sandbox.json
benchmark/: BENCHMARK.md.j2  README.md  build_benchmark_md.py  ops.py  run_benchmarks.py
blas/: ddgemm.f90  ddtrsm.f90
cmake/: FindMPFR.cmake  FortranCompiler.cmake  multifloatsfConfig.cmake.in
codegen/: README.md  gen_constants.py  requirements.txt
doc/: .gitignore  BENCHMARK.md  CHANGELOG.md  Doxyfile  Doxyfile.in  Makefile  README.md  build.sh  changelog.md  conf.py  conf.py.in  index.md  requirements.txt
doc/_extra/: index.html
doc/api/: index.md
doc/dev/: BOOST_COMPARISON.md  BOOST_OP_MATRIX.md  TRIPLE_DOUBLE.md  architecture.md  benchmark.md  benchmarks.md  boost-comparison.md  boost-op-matrix.md  build.md  codegen.md  configure.md  debugging.md  index.md  math-gaps.md  release.md  test.md  triple-double.md
doc/dev/benchmark/: results.md
doc/dev/benchmark/baseline/: benchmark-raptor-lake.json
doc/developer/: AUDIT_NOTES.md  AUDIT_TODO.md  BOOST_COMPARISON.md  BOOST_OP_MATRIX.md  C23_MATH_GAPS.md  INTERNALS.md  NAMING-SUGGESTION.md  PLAN-cexpm1-td-internals.md  PROGRESS-PRECISION.md  README.md  TRIPLE_DOUBLE.md
doc/guides/: building.md  error-handling.md  getting-started.md  matmul.md  precision.md
doc/user/: index.md  installation.md  matmul.md  precision.md  usage.md
doc/user/api/: index.md
example/: CMakeLists.txt  README.md  pi.cpp  pi.f90
fsrc/: CMakeLists.txt  multifloat.f90  multifloat_fuzz.f90  multifloat_test.f90  multifloats.fypp  test.f90
include/: multifloats.h
include/multifloats/: float64x2.h  version.h.in
scripts/: build_op_matrix.py  check_consumer_fortran.sh  check_exported_symbols.sh  check_f64x2_aliases.sh  check_fortran_abi_sync.sh  check_shared_exports.sh  gen_constants.py
scripts/lib/: c_abi_symbols.sh
src/: CMakeLists.txt  complex64x2_abi.inc  complex64x2_abi_kernels.inc  complex64x2_std.inc  dd_constants.f90.inc  dd_constants.hh  float64x2_abi.inc  float64x2_bessel.inc  float64x2_exp_log.inc  float64x2_f64x2_aliases.inc  float64x2_hyp.inc  float64x2_inv_trig.inc  float64x2_matmul.inc  float64x2_poly.inc  float64x2_special.inc  float64x2_td.inc  float64x2_td_log_atan2.inc  float64x2_trig.inc  localize_symbols.sh.in  multifloats.hh  multifloats_c.cc  multifloats_c.h  multifloats_io.cc  multifloats_math.cc  multifloats_math_abi_complex.inc  multifloats_math_abi_complex_kernels.inc  multifloats_math_abi_scalar.inc  multifloats_math_bessel.inc  multifloats_math_complex_std.inc  multifloats_math_exp_log.inc  multifloats_math_hyp.inc  multifloats_math_inv_trig.inc  multifloats_math_matmul.inc  multifloats_math_poly.inc  multifloats_math_special.inc  multifloats_math_td.inc  multifloats_math_trig.inc  multifloats_td.hh
src/complex64x2/: abi.inc  abi_kernels.inc  std.inc
src/float64x2/: bessel.inc  exp_log.inc  f64x2_aliases.inc  hyp.inc  inv_trig.inc  poly.inc  special.inc  td.inc  trig.inc
test/: README.md  abi_equivalence.f90  bench.cc  bench.f90  bench.fypp  bench_abi.f90  bench_boost_dd.cc  bench_c.f90  crosscheck.cc  crosscheck_bindings.f90  fuzz.cc  fuzz.f90  fuzz.fypp  fuzz_mpfr.cc  matmul.hh  multifloat_fuzz.f90  multifloat_test.f90  multifloats_precision.f90  precision.f90  test.cc  test.f90  test_boost_dd.cc  test_common.hh  test_common_mpfr.hh  test_mod.f90
test/consumer-fortran/: CMakeLists.txt  main.f90
test/integration/: abi_equivalence.f90  crosscheck.cc  crosscheck_bindings.f90
test/integration/blas/: wgemm.f90  wtrsm.f90
test/integration/consumer-fortran/: main.f90
test/support/: c_abi_bindings.f90
test/unit/: bench.fypp  bench_abi.f90  bench_boost_dd.cc  fuzz.cc  probe_bjn.cc  test.cc  test.f90  test_boost_dd.cc  test_common.hh  test_common_boost.hh
tier3/: README.md  baseline.txt  fuzz_final.txt  karatsuba_probe.cc  renorm_results.txt  renorm_sweep.cc  step1.txt  step2_final.txt  step2_summary.txt  step2a.txt  step2b.txt  step2c.txt
tier4/: README.md  after.txt  baseline.txt  casin_probe.cc  casin_trace.cc  catanh_probe.cc  fbench_before.txt
work-gemini/: bessel_constants.f90.inc  bessel_constants.hh  bessel_impl.cc  bessel_impl.f90  bessel_improved.hh  check_quad.cc  gen_bessel_constants.py  test_bessel.cc  test_bessel.f90  test_bessel_mpfr.cc
